# text2audiobook

./: analysis.ipynb  epub_to_text.py  pg11.txt  pyproject.toml  text2audiobook.py
input/: pg103-images-3.epub  pg103-images-3.pkl  pg103-images-3.txt  pg11-images-3.txt  pg7091-images-3.epub
src/: text_preprocess.py  text_to_speech.py
src/book_parsers/: epub_book_parser.py
src/chatterbox/: tts.py  vc.py
src/chatterbox/models/t3/: t3.py
src/chatterbox/models/t3/inference/custom_llama/: modeling_llama.py
src/chatterbox/models/t3/modules/: cond_enc.py
